crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT006_list.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `list`
  --> PT006.py:9:26
   |
 9 | @pytest.mark.parametrize("param1,param2", [(1, 2), (3, 4)])
   |                          ^^^^^^^^^^^^^^^
10 | def test_csv(param1, param2):
11 |     ...
   |
help: Use a `list` for the first argument
  |
9 - @pytest.mark.parametrize("param1,param2", [(1, 2), (3, 4)])
9 + @pytest.mark.parametrize(["param1", "param2"], [(1, 2), (3, 4)])
  |
note: This is an unsafe fix and may change runtime behavior

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `list`
  --> PT006.py:14:26
   |
14 | @pytest.mark.parametrize("   param1,   ,    param2   , ", [(1, 2), (3, 4)])
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
15 | def test_csv_with_whitespace(param1, param2):
16 |     ...
   |
help: Use a `list` for the first argument
   |
14 - @pytest.mark.parametrize("   param1,   ,    param2   , ", [(1, 2), (3, 4)])
14 + @pytest.mark.parametrize(["param1", "param2"], [(1, 2), (3, 4)])
   |
note: This is an unsafe fix and may change runtime behavior

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `list`
  --> PT006.py:19:26
   |
19 | @pytest.mark.parametrize("param1,param2", [(1, 2), (3, 4)])
   |                          ^^^^^^^^^^^^^^^
20 | def test_csv_bad_quotes(param1, param2):
21 |     ...
   |
help: Use a `list` for the first argument
   |
19 - @pytest.mark.parametrize("param1,param2", [(1, 2), (3, 4)])
19 + @pytest.mark.parametrize(["param1", "param2"], [(1, 2), (3, 4)])
   |
note: This is an unsafe fix and may change runtime behavior

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `list`
  --> PT006.py:24:26
   |
24 | @pytest.mark.parametrize(("param1", "param2"), [(1, 2), (3, 4)])
   |                          ^^^^^^^^^^^^^^^^^^^^
25 | def test_tuple(param1, param2):
26 |     ...
   |
help: Use a `list` for the first argument
   |
24 - @pytest.mark.parametrize(("param1", "param2"), [(1, 2), (3, 4)])
24 + @pytest.mark.parametrize(["param1", "param2"], [(1, 2), (3, 4)])
   |
note: This is an unsafe fix and may change runtime behavior

PT006 Wrong type passed to first argument of `pytest.mark.parametrize`; expected `str`
  --> PT006.py:29:26
   |
29 | @pytest.mark.parametrize(("param1",), [1, 2, 3])
   |                          ^^^^^^^^^^^
30 | def test_tuple_one_elem(param1, param2):
31 |     ...
   |
help: Use a string for the first argument

PT006 Wrong type passed to first argument of `pytest.mark.parametrize`; expected `str`
  --> PT006.py:39:26
   |
39 | @pytest.mark.parametrize(["param1"], [1, 2, 3])
   |                          ^^^^^^^^^^
40 | def test_list_one_elem(param1, param2):
41 |     ...
   |
help: Use a string for the first argument

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `list`
  --> PT006.py:54:26
   |
54 | @pytest.mark.parametrize(("param1, " "param2, " "param3"), [(1, 2, 3), (4, 5, 6)])
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
55 | def test_implicit_str_concat_with_parens(param1, param2, param3):
56 |     ...
   |
help: Use a `list` for the first argument
   |
54 - @pytest.mark.parametrize(("param1, " "param2, " "param3"), [(1, 2, 3), (4, 5, 6)])
54 + @pytest.mark.parametrize(["param1", "param2", "param3"], [(1, 2, 3), (4, 5, 6)])
   |
note: This is an unsafe fix and may change runtime behavior

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `list`
  --> PT006.py:59:26
   |
59 | @pytest.mark.parametrize("param1, " "param2, " "param3", [(1, 2, 3), (4, 5, 6)])
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
60 | def test_implicit_str_concat_no_parens(param1, param2, param3):
61 |     ...
   |
help: Use a `list` for the first argument
   |
59 - @pytest.mark.parametrize("param1, " "param2, " "param3", [(1, 2, 3), (4, 5, 6)])
59 + @pytest.mark.parametrize(["param1", "param2", "param3"], [(1, 2, 3), (4, 5, 6)])
   |
note: This is an unsafe fix and may change runtime behavior

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `list`
  --> PT006.py:64:26
   |
64 | @pytest.mark.parametrize((("param1, " "param2, " "param3")), [(1, 2, 3), (4, 5, 6)])
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
65 | def test_implicit_str_concat_with_multi_parens(param1, param2, param3):
66 |     ...
   |
help: Use a `list` for the first argument
   |
64 - @pytest.mark.parametrize((("param1, " "param2, " "param3")), [(1, 2, 3), (4, 5, 6)])
64 + @pytest.mark.parametrize(["param1", "param2", "param3"], [(1, 2, 3), (4, 5, 6)])
   |
note: This is an unsafe fix and may change runtime behavior

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `list`
  --> PT006.py:69:26
   |
69 | @pytest.mark.parametrize(("param1,param2"), [(1, 2), (3, 4)])
   |                          ^^^^^^^^^^^^^^^^^
70 | def test_csv_with_parens(param1, param2):
71 |     ...
   |
help: Use a `list` for the first argument
   |
69 - @pytest.mark.parametrize(("param1,param2"), [(1, 2), (3, 4)])
69 + @pytest.mark.parametrize(["param1", "param2"], [(1, 2), (3, 4)])
   |
note: This is an unsafe fix and may change runtime behavior

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `list`
  --> PT006.py:74:39
   |
74 | parametrize = pytest.mark.parametrize(("param1,param2"), [(1, 2), (3, 4)])
   |                                       ^^^^^^^^^^^^^^^^^
75 |
76 | @parametrize
   |
help: Use a `list` for the first argument
   |
74 - parametrize = pytest.mark.parametrize(("param1,param2"), [(1, 2), (3, 4)])
74 + parametrize = pytest.mark.parametrize(["param1", "param2"], [(1, 2), (3, 4)])
   |
note: This is an unsafe fix and may change runtime behavior

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `list`
  --> PT006.py:81:35
   |
81 | @pytest.mark.parametrize(argnames=("param1,param2"), argvalues=[(1, 2), (3, 4)])
   |                                   ^^^^^^^^^^^^^^^^^
82 | def test_keyword_arguments(param1, param2):
83 |     ...
   |
help: Use a `list` for the first argument
   |
81 - @pytest.mark.parametrize(argnames=("param1,param2"), argvalues=[(1, 2), (3, 4)])
81 + @pytest.mark.parametrize(argnames=["param1", "param2"], argvalues=[(1, 2), (3, 4)])
   |
note: This is an unsafe fix and may change runtime behavior

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `str`
  --> PT006.py:86:26
   |
86 | @pytest.mark.parametrize(("param",), [(1,), (2,)])
   |                          ^^^^^^^^^^
87 | def test_single_element_tuple(param):
88 |     ...
   |
help: Use a string for the first argument
   |
86 - @pytest.mark.parametrize(("param",), [(1,), (2,)])
86 + @pytest.mark.parametrize("param", [1, 2])
   |

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `str`
  --> PT006.py:91:26
   |
91 | @pytest.mark.parametrize(("param",), [[1], [2]])
   |                          ^^^^^^^^^^
92 | def test_single_element_list(param):
93 |     ...
   |
help: Use a string for the first argument
   |
91 - @pytest.mark.parametrize(("param",), [[1], [2]])
91 + @pytest.mark.parametrize("param", [1, 2])
   |

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `str`
  --> PT006.py:96:26
   |
96 | @pytest.mark.parametrize(("param",), [[1], [2]])
   |                          ^^^^^^^^^^
97 | def test_single_element_list(param):
98 |     ...
   |
help: Use a string for the first argument
   |
96 - @pytest.mark.parametrize(("param",), [[1], [2]])
96 + @pytest.mark.parametrize("param", [1, 2])
   |

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `str`
   --> PT006.py:103:5
    |
101 |   # Unsafe fix
102 |   @pytest.mark.parametrize(
103 | /     (
104 | |         # comment
105 | |         "param",
106 | |     ),
    | |_____^
107 |       [[1], [2]],
108 |   )
    |
help: Use a string for the first argument
    |
103 ~     "param",
104 ~     [1, 2],
    |
note: This is an unsafe fix and may change runtime behavior

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `str`
   --> PT006.py:114:5
    |
112 | # Unsafe fix
113 | @pytest.mark.parametrize(
114 |     ("param",),
    |     ^^^^^^^^^^
115 |     [
116 |         (
    |
help: Use a string for the first argument
    |
114 ~     "param",
115 |     [
116 ~         1,
117 ~         2,
    |
note: This is an unsafe fix and may change runtime behavior

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `str`
   --> PT006.py:129:5
    |
127 | # Safe fix
128 | @pytest.mark.parametrize(
129 |     ("param",),
    |     ^^^^^^^^^^
130 |     [
131 |         (1,),
    |
help: Use a string for the first argument
    |
129 ~     "param",
130 |     [
131 ~         1,
132 |         # comment
133 ~         2,
    |

PT006 Wrong type passed to first argument of `pytest.mark.parametrize`; expected `str`
   --> PT006.py:142:5
    |
140 | # A fix should be suggested for `argnames`, but not for `argvalues`.
141 | @pytest.mark.parametrize(
142 |     ("param",),
    |     ^^^^^^^^^^
143 |     [
144 |         (1,),
    |
help: Use a string for the first argument

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `str`
   --> PT006.py:164:5
    |
162 | # See: https://github.com/astral-sh/ruff/issues/22441
163 | @pytest.mark.parametrize(
164 |     ["param"],
    |     ^^^^^^^^^
165 |     [
166 |         ((),),
    |
help: Use a string for the first argument
    |
164 ~     "param",
165 |     [
166 ~         (),
167 ~         (1,),
    |

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `str`
   --> PT006.py:175:5
    |
174 | @pytest.mark.parametrize(
175 |     ["param"],
    |     ^^^^^^^^^
176 |     [
177 |         ((1, 2),),
    |
help: Use a string for the first argument
    |
175 ~     "param",
176 |     [
177 ~         (1, 2),
178 ~         (3, 4),
    |

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `str`
   --> PT006.py:186:5
    |
185 | @pytest.mark.parametrize(
186 |     ["param"],
    |     ^^^^^^^^^
187 |     [
188 |         (((1,),),),
    |
help: Use a string for the first argument
    |
186 ~     "param",
187 |     [
188 ~         ((1,),),
    |

PT006 [*] Wrong type passed to first argument of `pytest.mark.parametrize`; expected `str`
   --> PT006.py:196:5
    |
195 | @pytest.mark.parametrize(
196 |     ["param"],
    |     ^^^^^^^^^
197 |     [
198 |         (((1,)),),
    |
help: Use a string for the first argument
    |
196 ~     "param",
197 |     [
198 ~         (1,),
    |
